--- a/ULS_Site/Web.config
+++ b/ULS_Site/Web.config
@@ -33,6 +33,8 @@
           providerName="System.Data.SqlClient" />
       <add name="ULS_db1ConnectionString1" connectionString="Data Source=(local);Initial Catalog=ULS_db1;Persist Security Info=True;User ID=uls2008;Password=uls2008"
           providerName="System.Data.SqlClient" />
+      <add name="ULS_db1ConnectionString2" connectionString="Data Source=(local);Initial Catalog=ULS_db1;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
 	<system.web>
     <!--     <sessionState mode="StateServer" timeout="60" /> -->
